[package]
name = "mdq"
version = "0.2.0"
authors = ["fcd <femnad@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neli = "0.4.4"
structopt = { version = "0.3", default-features = false }
trust-dns-client = "0.19.5"
